Fix z-index and body padding for hte play alongs player and footer

--- a/src/assets/sass/partials/_nav.scss
+++ b/src/assets/sass/partials/_nav.scss
@@ -12,6 +12,14 @@ body {
   @include large {
     padding-top:65px;
   }
+
+  &.has-public-footer {
+    padding-bottom:630px;
+
+    @include small {
+      padding-bottom:270px;
+    }
+  }
 }
 
 #nav {
@@ -472,20 +480,13 @@ body {
     color:#fff;
   }
 }
-body.has-public-footer {
-  padding-bottom:650px;
-
-  @include small {
-    padding-bottom:270px;
-  }
-}
 
 footer {
   position:absolute;
   bottom:0;
   left:0;
   width:100%;
-  z-index:96;
+  z-index:95;
 
   .footer-col {
     height:25px;
